--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Santi Cazorla has yet to be offered a new deal by Arsenal but wants to remain with the Gunners beyond his current contract, which expires at the end of the season.
+This is contrary to the use of the word adopted in the schools;
