--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-The products come discretely colour coded for each individual skin type, and is completely quick and fuss free to use.
+It refers to the incidence where an implausible concept or character is brought into the story in order to make the conflict in the story resolve and to bring about a pleasing solution.
