--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-<speak version="1.0" xmlns="http://www.w3.org/2001/10/synthesis" xmlns:mstts="http://www.w3.org/2001/mstts" xmlns:emo="http://www.w3.org/2009/10/emotionml" xml:lang="en-us"><mstts:prompt domain="Music"/><emo:emotion><emo:category name="Calm" value="1.0"/>And now, <say-as interpret-as="media">Incomplete</say-as><mstts:ttsbreak strength="medium"/> by <say-as interpret-as="name">Backstreet Boys</say-as> on Spotify</emo:emotion></speak>
+ÿþGM earned a record $12.5 billion in operating income in 2016, up 16% from the year before.
