--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-ÿþGM earned a record $12.5 billion in operating income in 2016, up 16% from the year before.
+In what will surely go down as one of the most shocking moments in Oscar history, bits and pieces of what on earth happened to allow Warren Beatty to read the wrong Best Picture Oscar winner are starting to emerge.
