--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-In what will surely go down as one of the most shocking moments in Oscar history, bits and pieces of what on earth happened to allow Warren Beatty to read the wrong Best Picture Oscar winner are starting to emerge.
+Sure, I can remind you to Drop off ups box when you get home. Sound good? Great.
