--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's Pick It Up (feat. A$AP Rocky) by ASAP rocky on Spotify
+I'm a better DJ with Spotify Premium. Anyway, Making a station for New Rules by Dua Lipa on iHeartRadio
