--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium. Anyway, Making a station for New Rules by Dua Lipa on iHeartRadio
+Here's the latest episode from the podcast Create Your Now ~ Your Best Selfie on TuneIn
