--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the latest episode from the podcast Create Your Now ~ Your Best Selfie on TuneIn
+Queueing up a station for plum on IHeartRadio
