--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Queueing up a station for Sultan & Ned Shepard on IHeartRadio
+Queueing up a station for Foxtrot Uniform Charlie Kilo by The Bloodhound Gang on IHeartRadio
