--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Creating a station inspired by I Like to Move It by Reel 2 Real on iHeartRadio
+Here's the playlist Everything (Shuffle driving) on Spotify
