--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Man's Not Hot - Christmas Edition on Spotify
+Queueing up a station for wrong bitch by todrick Hall on IHeartRadio
