--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium. Anyway, Creating a station inspired by Strip That Down by Liam Payne on iHeartRadio
+Queueing up a station for Maluma on IHeartRadio
