--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Christmas Reggae Songs on Spotify
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Donovan on iHeartRadio
