--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by Little Drummer Boy/Peace On Earth on IHeartRadio
+Here's the playlist JAZZ FUSION FUNK AND SOUL on Spotify
