--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, the latest episode from the podcast Inquiring Minds on TuneIn
+Queueing up a station for Ave Maria by Celtic Woman on IHeartRadio
