--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Libre Soy - Latin America Spanish End Credit Version by Martina Stoessel on Spotify
+And now, Hip To Be Square by Huey Lewis & the News on Spotify
