--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, songs by Vocal Union on Spotify
+I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for The Wheels on the Bus on iHeartRadio
