--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's Respect by Aretha Franklin on Spotify
+I can play that if you get Spotify Premium. Anyway, Queueing up a station for acoustic covers music on iHeartRadio
