--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I can play that if you get Spotify Premium. Anyway, Queueing up a station for acoustic covers music on iHeartRadio
+And now, Alison by Elvis Costello on Spotify
