--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, the playlist Training Power on Spotify
+You're listening to Two Tickets To Paradise (Album Version) by Eddie Money on IHeartRadio
