--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to Two Tickets To Paradise (Album Version) by Eddie Money on IHeartRadio
+Here's Round Here by Counting Crows on Spotify
