--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I couldn't find that but here's songs by Original Motion Picture Soundtrack on Spotify
+And now, the playlist Korean Pop Hits on Spotify
