--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Making a station for Mary, Did You Know by David Phelps on IHeartRadio
+Creating a station inspired by Hosanna by Kirk Franklin on IHeartRadio
