--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Creating a station inspired by Everything Is AWESOME!!! by Tegan and Sara on iHeartRadio
+And now, the playlist Old Man Logan on Spotify
