--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by Santana on IHeartRadio
+Here's the album Hermosa Experiencia (feat. Banda Ms De Sergio Lizarraga) on Spotify
