--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Bulgarian Folk music on Spotify
+Here's The Christmas Song (Chestnuts Roasting on an Open Fire) by Nat King Cole on Spotify
