--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's The Christmas Song (Chestnuts Roasting on an Open Fire) by Nat King Cole on Spotify
+Here's Pastor Charles Denkins on Spotify
