--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to A Marshmallow World by Seth MacFarlane on Spotify
+I can play that if you get Spotify Premium. Anyway, Creating a station inspired by Lauryn Hill on iHeartRadio
