--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I can play that if you get Spotify Premium. Anyway, Creating a station inspired by Lauryn Hill on iHeartRadio
+Here's songs by Burt Bacharach on Spotify
