--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Smoke Break (feat. Future) by Chance the Rapper on Spotify
+I couldn't find that but here's some music by Men In Black (The Score Album) on Spotify
