--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I couldn't find that but here's some music by Men In Black (The Score Album) on Spotify
+I couldn't find that but here's some music by Jon Cozart on Spotify
