--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Trapaholics on Spotify
+Here's the soundtrack Star Trek II: The Wrath of Khan Original Motion Picture Soundtrack on Spotify
