--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Awesome Music Remix of Epicness (1.0) on Spotify
+I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Thank You by Led Zeppelin on iHeartRadio
