--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Thank You by Led Zeppelin on iHeartRadio
+Queueing up a station for Dale on IHeartRadio
