--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Say It Loud - I'm Black And I'm Proud by James Brown on Spotify
+Creating a station inspired by Nicolas Jaar on IHeartRadio
