--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to Got the T-Shirt by Blake Shelton on Spotify
+Here's the latest episode from the podcast The Dan Le Batard Show with Stugotz on TuneIn
