--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to Nocturne for Piano, No. 1 in B flat minor, Op. 9,1 by Frédéric Chopin on IHeartRadio
+And now, the latest episode from the podcast Thistle and Shamrock on TuneIn
