--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's the playlist Meditation on Spotify
+And now, Redneck Games (In the Style of Jeff Foxworthy & Alan Jackson) [Karaoke Version] by Ameritz Karaoke Entertainment on Spotify
