--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Redneck Games (In the Style of Jeff Foxworthy & Alan Jackson) [Karaoke Version] by Ameritz Karaoke Entertainment on Spotify
+And now, Remember Me (Ernesto de la Cruz) by Benjamin bratt on Spotify
