--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for The Cars on iHeartRadio
+Here's some music by Sammy Hagar on Spotify
