--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to Leonard Cohen - Blessed Is the Memory on TuneIn
+Creating a station inspired by Ballade pour Adeline by Richard Clayderman on IHeartRadio
