--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Queueing up a station for A Skylit Drive on IHeartRadio
+And now, the latest episode from the podcast Legacy Podcast: Bill Withers on TuneIn
