--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, the latest episode from the podcast Legacy Podcast: Bill Withers on TuneIn
+And now, the playlist British Christmas on Spotify
