--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's Jack White on Spotify
+I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Queueing up a station for Hot In Herre by Nelly on iHeartRadio
