--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Les Miserables Medley by Emile Pandolfi on Spotify
+Creating a station inspired by Rocket Man (I Think It's Going To Be A Long Long Time) by Elton John on IHeartRadio
