--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by Rocket Man (I Think It's Going To Be A Long Long Time) by Elton John on IHeartRadio
+Queueing up a station for Sloop John B by The Beach Boys on IHeartRadio
