--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Queueing up a station for I Want to Know What Love Is by Foreigner on IHeartRadio
+You're listening to Migration by Michael Giacchino on Spotify
