--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Cry For You - Granite & Phunk Club Mix by September on Spotify
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Creating a station inspired by The Field on iHeartRadio
