--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Creating a station inspired by The Field on iHeartRadio
+Here's the album Private Dancer (30th Anniversary Issue) on Spotify
