--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's Materialista by Silvestre Dangond on Spotify
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Queueing up a station for Shania Twain on iHeartRadio
