--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Queueing up a station for Shania Twain on iHeartRadio
+Queueing up a station for Stompin' Tom Connors on IHeartRadio
