--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Tuning in to Bigfoot Country on TuneIn
+I can play that if you have Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Queueing up a station for Old MacDonald Had a Farm on iHeartRadio
