--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by Shining Star by Earth, Wind & Fire on IHeartRadio
+Here's Stay With Me by Kevin "K.O." Olusola on Spotify
