--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, the playlist As 50 mais tocadas nos Estados Unidos on Spotify
+Creating a station inspired by 6 Minutes by Jonas Brothers on IHeartRadio
