--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Oh! Darling - Remastered by The Beatles on Spotify
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Earth, Wind & Fire on iHeartRadio
