--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Earth, Wind & Fire on iHeartRadio
+Here's some music by AJ Rafael on Spotify
