--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You're listening to Royals by Lorde on IHeartRadio
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for time on iHeartRadio
