--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by piano Christmas music on IHeartRadio
+Queueing up a station for Bohemian Rhapsody by Queen on IHeartRadio
