--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Here's Sweet Georgia Brown by Isham Jones and His Orchestra on Spotify
+Tuning in to delta radio Hard Rock and Heavy Metal (Föhnfrisur) on TuneIn
