--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Queueing up a station for Young London by Angels and Airwaves on IHeartRadio
+And now, Redneck Games (In the Style of Jeff Foxworthy and Alan Jackson) [Karaoke Version] by Ameritz Karaoke Entertainment on Spotify
