--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Redneck Games (In the Style of Jeff Foxworthy and Alan Jackson) [Karaoke Version] by Ameritz Karaoke Entertainment on Spotify
+And now, Cry For You - Granite and Phunk Club Mix by September on Spotify
