--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-And now, Cry For You - Granite and Phunk Club Mix by September on Spotify
+Creating a station inspired by Shining Star by Earth, Wind and Fire on IHeartRadio
