--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Creating a station inspired by Shining Star by Earth, Wind and Fire on IHeartRadio
+I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Earth, Wind and Fire on iHeartRadio
