--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-I'm a better DJ with Spotify Premium, just sign in under the Music section of the Cortana app under the notebook to get started, Anyway, Making a station for Earth, Wind and Fire on iHeartRadio
+ÿþAnd now, Lead Me to the Cross by Hillsong United on Spotify
