--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Simpson’s last known address was in Houston.
+Officials in both states told the AP that Phillips could have voted, however, by producing identification and updating his address at the polls.
