--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-The message is "Yeah not this time seeing how the write ups he forced me to sign were false information and i told him that and he was making a big deal about it and what i was trying to explain what was wrong so i said wtf ever but that is not what happened" Reply, call back, or are you done?
+Coaching: Getting better at programming, I am good at seeing complex movements and breaking them down.
