--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Congress has already taken some actions toward repealing the law through the complex budget reconciliation process.
+Stendra Vs Viagra Patients also used Sexual Encounter Profile SEP diaries to record their sexual experiences.
