--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-According to the Navy, the Enterprise is the fourth aircraft carrier in naval history to record 400,000 arrested landings, a milestone reached a little more than a year before it was deactivated in December 2012.
+He concluded: “I understand the perspective of those who object to my attending this meeting, but I believe at this time that engaging on critical issues will on balance serve the greater good.”
