--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Despite over half a million people shutting down Washington, DC on Saturday, police present at the demonstration didn’t make any arrests of protesters.
+Hardaway and Schroder each were 2 for 2 on 3-pointers in the third quarter, which ended with a seven-point Atlanta lead.
