--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Caleb Jenerette, Aynor: The Blue Jackets’ senior standout had 24 points, seven assists and three rebounds to lead his team to a 63-56 win over Creek Bridge.
+"So I had no idea what the timing of the contract was."
