--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Viagra Coupons From Pfizer Pfizer accepts no responsibility or liability for the content or services of other websites.
+But it's essential to have spent at least $600 on prescriptions during this calendar year, live within the United States and meet the plan's earnings necessities, which can be seen on their website.
