--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-You are a new born monster, you live in the city of Omen and small children’s fingers are your favorite all time snacks.
+In last years Anthropological Journal you will find two short monographs from my pen upon the subject.
