--- a/reader.html
+++ b/reader.html
@@ -1,1 +1,1 @@
-Why the terms are related in this serial way must form the subject of later examination.
+Officials in both states told the AP that Phillips could have voted, however, by producing identification and updating his address at the polls.
